clean up fonts and things

--- a/1904.04051/1904.04051.tex
+++ b/1904.04051/1904.04051.tex
@@ -1765,11 +1765,14 @@ where $T_i\in(\sigma_i,\rho_i)$  $i=1,\dots,n$. If $\sigma_i=\sigma$, $\rho_i=\r
 \varepsilon^{(n)}_\sigma(P)   \boldsymbol{T}(e)=\boldsymbol{T}(P)  \varepsilon^{(n)}_\rho(P)\,.
 \]
 
-To understand better the physical interpretation of $\varepsilon^{(n)}_\rho(P)$, fix a morphism $\rho$ and consider a family of intertwiners $U_k\in(\sigma_k,\rho)$, where $\sigma_k$ are morphisms localized in spacelike separated regions $\Ocal_k$, $k=1,\dots,n$. Let $\Omega\in\Hcal_0$ be 
+To better understand the physical interpretation of $\varepsilon^{(n)}_\rho(P)$, fix a morphism $\rho$ and consider a family of intertwiners $U_k\in(\sigma_k,\rho)$, where $\sigma_k$ are morphisms localized in spacelike separated regions $\Ocal_k$, $k=1,\dots,n$. Let $\Omega\in\Hcal_0$ be 
 the vacuum vector. Clearly,
-\[
-\left<\pi_0(U_k^*)\Omega,\pi_0(\rho(A)) \pi_0(U_k^*)\Omega\right>=\left<\Omega,\pi_0(U_k\rho(A)U_k^*)\Omega\right>=\left<\Omega,\pi_0(\sigma_k(A)) \Omega\right>=\omega_0\circ \sigma_k(A)\,,
-\]
+\begin{align*}
+\left<\pi_0(U_k^*)\Omega,\pi_0(\rho(A)) \pi_0(U_k^*)\Omega\right>
+  &=\left<\Omega,\pi_0(U_k\rho(A)U_k^*)\Omega\right>\\
+  &=\left<\Omega,\pi_0(\sigma_k(A)) \Omega\right>\\
+  &=\omega_0\circ \sigma_k(A)\,,
+\end{align*}
 so $\omega_0\circ\sigma_k$ is a vector state on $\rho\Ac$ with the distinguished vector $\pi_0(U_k^*)\Omega$.
 
 Now consider vectors of the form
