--- a/1904.04051/1904.04051.tex
+++ b/1904.04051/1904.04051.tex
@@ -429,9 +429,11 @@ of $\Ac$ on $\HH\oplus\HH$.
 		\ip{[A]}{[B]} = \omega(A^*B) \qquad A,B\in\Ac,
 		\]
 		which is well-defined (i.e., independent of the choice of representatives, and has the properties of an inner product) due to the Cauchy--Schwarz inequality and definition of $\Ic_\omega$ \emph{(Exercises!)}. For example,
-		\[
-		\ip{[A]}{[A]} = 0\quad\iff\quad \omega(A^*A)=0\quad\iff\quad A\in\Ic_\omega \quad\iff\quad[A]=0.
-		\] 
+		\begin{align*}
+		\ip{[A]}{[A]} = 0 & \iff\quad \omega(A^*A)=0 \\
+		&\iff\quad A\in\Ic_\omega \\
+		& \iff\quad[A]=0.
+		\end{align*}
 		\item Define the Hilbert space $\HH_\omega$ as the completion of $\DD_\omega$ with respect to the inner product just mentioned; by construction $\DD_\omega$ is dense in $\HH_\omega$. 
 		\item Define $\Omega_\omega = [\II]\in\DD_\omega\subset\HH_\omega$, noting that
 		$\|\Omega_\omega\|^2 = \omega(\II) = 1$.
