--- a/1112.1507/1112.1507.tex
+++ b/1112.1507/1112.1507.tex
@@ -2,6 +2,27 @@
 
 \documentclass[12pt]{article}
 
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+\usepackage[letterpaper, margin=1.2in]{geometry}
+\tolerance=2000
+\usepackage[small]{titlesec}
+
 \title{The Physical Principles of Quantum Mechanics. A critical review}
 
 \author{F. Strocchi \\ INFN, Sezione di Pisa, Italy}
@@ -28,8 +49,6 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 
-\textwidth=5in \textheight=7.53in
-\pagestyle{myheadings}
 
 \def \lan   {\langle}
 \def \ran   {\rangle}
@@ -386,7 +405,8 @@ The states define linear (positive) functionals $\om(A)$ on each $\A_A$, continu
 
 \noindent By definition of expectations  $\lan \lambda B  + C \ran_\om = \lambda \lan B \ran_\om + \lan C \ran_\om$, $\lan B^2 \ran_\om \geq 0,$ i.e. the states define {\em positive linear functionals} $\om(A) \eqq \lan A \ran_\om$ on $\A_A$. Since each observable $A$ is defined by an apparatus with inevitable limitations on the possible outcomes (e.g. the set of positions which the pointer may  take is bounded), independently of the state in which the measurement is done,  one has $ \mbox{sup}_\om |m^\om_i(A)| \eqq m(A) < \infty$.  Then,   \be{ || A || \eqq \mbox{sup}_\om \,|\om(A)| }\ee is a finite positive  number. Obviously, $|\om(A)| \leq || A ||$. 
 Furthermore, m1 and the definition (2.5) easily give eqs.\,(2.3) and, by the positivity of the states, the first of eqs.\,(2.4).  
-Finally, by the positivity of the states,   $ 0 \leq \om((B + \l C)^2)$, $\forall \l \in \Rbf$, one has $$|\om(B \,C)| \leq  \om(B^2)^{1/2}\, \om(C^2)^{1/2} \leq || B^2 ||^{\ume}\, || C^2 ||^{\ume}, $$ which implies the second of eqs.\,(2.4).   QED
+Finally, by the positivity of the states,   $ 0 \leq \om((B + \l C)^2)$, $\forall \l \in \Rbf$, one has $$|\om(B \,C)| \leq  \om(B^2)^{1/2}\, \om(C^2)^{1/2} \leq || B^2 ||^{\ume}\, || C^2 ||^{\ume}, $$ which implies the second of eqs.\,(2.4).   
+QED
 
 \vspace{2mm}
 It is part of the experimental wisdom that the final results of measurements of observables are recorded by the expectations $\lan A \ran_\omega$ and therefore in order to distinguish two observables $A, B$ one should be able to prepare states $\omega$ such that $\lan A \ran_\omega \neq \lan B \ran_\omega$. Technically,  this means that {\bf the states separate the observables} (just as the observables separate the states), i.e. $$ 
@@ -405,7 +425,10 @@ or in the weaker form $$\lan A^n \ran_\om \geq 0, \,\,\,\,\,\forall n, \, \foral
 The two conditionsare equivalent if the positive functionals 
 $$ \Omega_{A^n}(A) \eqq \lim_{N \ra \infty} N^{-1} \sum_{i = 1}^N m_i^\omega(A^n A A^n)$$ describe the expectations of realizable states $\omega_{A^n}$, since then $\lan A \ran_\omega \geq 0$, $\forall \omega$ implies $\lan A^{2n + 1}\ran_\omega = \lan A^{2n} \ran_\omega \, \lan A \ran_{\omega_{A^n}} \geq 0$. 
 
-\begin{Proposition} Under the above assumption (2.7)each observable $A$ generates a (commutative)  $C^*$-al\-ge\-bra $\A_A^C$, with identity,  through the  complex polynomials of $A$,  and the set theoretical union of such algebras $\A_A^C$ yields an extension $\O^C$ of $\O$; the states are naturally extended  to linear positive functionals on each $\A_A^C$.\end{Proposition}\Pf\, We start by showing that  
+\begin{Proposition} Under the above assumption (2.7)
+each observable $A$ generates a (commutative)  $C^*$-al\-ge\-bra $\A_A^C$, with identity,  through the  complex polynomials of $A$,  and the set theoretical union of such algebras $\A_A^C$ yields an extension $\O^C$ of $\O$; the states are naturally extended  to linear positive functionals on each $\A_A^C$.
+\end{Proposition}
+\Pf\, We start by showing that  
 $|| B^2 || = || B ||^2$, $\forall B \in \A_A$. The second of eqs.(2.5) gives
  $|| B^2 || \geq || B ||^2$. 
 On the other hand, by eq.\,(2.6),  $\om(|| B || \id \pm B) \geq 0$, $\forall \om$, so that, by eq.\,(2.7),    $|| B || \id \pm B $ are positive elements of $\A_A$. 
