--- a/1211.5627/MQ-formalism-2012.tex
+++ b/1211.5627/MQ-formalism-2012.tex
@@ -1,13 +1,34 @@
 \pdfoutput=1
-\documentclass[a4paper,11pt,eqsecnum,twoside,titlepage,portrait]{book}
+\documentclass[a4paper,12pt,eqsecnum,titlepage,portrait]{book}
 \usepackage[isolatin]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[english, francais]{babel}
 \selectlanguage{english}
-\usepackage[left=2.5cm,right=2.5cm,top=2.5cm,bottom=3.5cm]{geometry}  % mise en page sortie
+%\usepackage[left=2.5cm,right=2.5cm,top=2.5cm,bottom=3.5cm]{geometry}  % mise en page sortie
 \usepackage{graphicx}
 \usepackage{epstopdf}
 \usepackage{amsmath,amsfonts,amssymb,amscd,mathbbol,stmaryrd,wasysym,manfnt}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+%\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+\usepackage[letterpaper, margin=1.3in]{geometry}
+\tolerance=2000
+\usepackage[small]{titlesec}
 
 %%%%%%%%%%%%% NUMEROTATION %%%%%%%%%%%%%%%%%%%%%%
 \numberwithin{equation}{section} % numerotation des equations par section (amsmath)
