--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,124 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-07-08 07:41:40 -0400 
+%% Created for Pete Su at 2019-07-12 08:21:39 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Strocchi2012,
+	Abstract = {The standard presentation of the principles of quantum mechanics is critically reviewed both from the experimental/operational point and with respect to the request of mathematical consistency and logical economy. A simpler and more physically motivated formulation is discussed. The existence of non commuting observables, which characterizes quantum mechanics with respect to classical mechanics, is related to operationally testable complementarity relations, rather than to uncertainty relations. The drawbacks of Dirac argument for canonical quantization are avoided by a more geometrical approach.},
+	Author = {Strocchi, F.},
+	Date-Added = {2019-07-12 08:21:23 -0400},
+	Date-Modified = {2019-07-12 08:21:38 -0400},
+	Day = {30},
+	Doi = {10.1140/epjp/i2012-12012-4},
+	Issn = {2190-5444},
+	Journal = {The European Physical Journal Plus},
+	Month = {Jan},
+	Note = {\href{https://arxiv.org/abs/1112.1507}{arXiv:1112.1507}},
+	Number = {1},
+	Pages = {12},
+	Title = {The physical principles of quantum mechanics. A critical review},
+	Url = {https://doi.org/10.1140/epjp/i2012-12012-4},
+	Volume = {127},
+	Year = {2012},
+	Bdsk-Url-1 = {https://doi.org/10.1140/epjp/i2012-12012-4}}
+
+@article{David:2012fe,
+	Archiveprefix = {arXiv},
+	Author = {David, Francois},
+	Date-Added = {2019-07-12 08:10:18 -0400},
+	Date-Modified = {2019-07-12 08:11:40 -0400},
+	Doi = {10.1007/978-3-319-10539-0},
+	Eprint = {1211.5627},
+	Journal = {Lect. Notes Phys.},
+	Note = {\href{https://arxiv.org/abs/1211.5627v1}{arXiv:1211.5627v1}},
+	Pages = {pp.1-157},
+	Primaryclass = {math-ph},
+	Reportnumber = {T12-042},
+	Slaccitation = {%%CITATION = ARXIV:1211.5627;%%},
+	Title = {{The Formalisms of Quantum Mechanics}},
+	Volume = {893},
+	Year = {2015},
+	Bdsk-Url-1 = {https://doi.org/10.1007/978-3-319-10539-0}}
+
+@book{Paugam2014,
+	Author = {Fr{\'{e}}d{\'{e}}ric Paugam},
+	Date-Added = {2019-07-12 08:08:24 -0400},
+	Date-Modified = {2019-07-12 08:08:24 -0400},
+	Doi = {10.1007/978-3-319-04564-1},
+	Publisher = {Springer International Publishing},
+	Title = {Towards the Mathematics of Quantum Field Theory},
+	Url = {https://doi.org/10.1007/978-3-319-04564-1},
+	Year = {2014},
+	Bdsk-Url-1 = {https://doi.org/10.1007/978-3-319-04564-1}}
+
+@book{Bratteli1987,
+	Abstract = {C*-algebra theory is an abstraction of the structure of certain algebras of bounded operators acting on a Hilbert space and is simultaneously a special case of the theory of Banach algebras. Consequently, the theory can be developed in two different ways. Either one can begin with an abstract description suited to the general analysis of Banach algebras or one may start with a specific representation of the algebra on a Hilbert space. We will follow the first of these approaches.},
+	Address = {Berlin, Heidelberg},
+	Author = {Bratteli, Ola and Robinson, Derek W.},
+	Date-Added = {2019-07-12 08:05:20 -0400},
+	Date-Modified = {2019-07-12 08:05:54 -0400},
+	Doi = {10.1007/978-3-662-02520-8_2},
+	Isbn = {978-3-662-02520-8},
+	Publisher = {Springer Berlin Heidelberg},
+	Title = {Operator Algebras and Quantum Statistical Mechanics 1},
+	Year = {1987},
+	Bdsk-Url-1 = {https://doi.org/10.1007/978-3-662-02520-8_2}}
+
+@book{deBroglie90,
+	Author = {Louis de Broglie},
+	Date-Added = {2019-07-12 07:57:44 -0400},
+	Date-Modified = {2019-07-12 07:59:10 -0400},
+	Publisher = {Kluwer Academic Publishers (Springer)},
+	Title = {Heisenberg's Uncertainties and the Probabilistic Interpretation of Wave Mechanics},
+	Translator = {van der Merwe, A.},
+	Year = {1990}}
+
+@book{Strocchi2008,
+	Author = {Strocchi, F},
+	Date-Added = {2019-07-12 07:52:58 -0400},
+	Date-Modified = {2019-07-12 07:53:50 -0400},
+	Doi = {10.1142/7038},
+	Edition = {2nd},
+	Eprint = {https://www.worldscientific.com/doi/pdf/10.1142/7038},
+	Publisher = {WORLD SCIENTIFIC},
+	Title = {An Introduction to the Mathematical Structure of Quantum Mechanics},
+	Url = {https://www.worldscientific.com/doi/abs/10.1142/7038},
+	Year = {2008},
+	Bdsk-Url-1 = {https://www.worldscientific.com/doi/abs/10.1142/7038},
+	Bdsk-Url-2 = {https://doi.org/10.1142/7038}}
+
+@article{Fewster:2019ixc,
+	Archiveprefix = {arXiv},
+	Author = {Fewster, Christopher J. and Rejzner, Kasia},
+	Date-Added = {2019-07-12 07:50:19 -0400},
+	Date-Modified = {2019-07-12 07:51:00 -0400},
+	Eprint = {1904.04051},
+	Note = {\href{https://arxiv.org/abs/1904.04051}{https://arXiv:1904.04051}},
+	Primaryclass = {hep-th},
+	Slaccitation = {%%CITATION = ARXIV:1904.04051;%%},
+	Title = {{Algebraic Quantum Field Theory - An Introduction}},
+	Year = {2019}}
+
+@article{REDEI1996,
+	Author = {Miklos R{\'e}dei},
+	Date-Added = {2019-07-12 07:49:03 -0400},
+	Date-Modified = {2019-07-12 07:49:11 -0400},
+	Doi = {https://doi.org/10.1016/S1355-2198(96)00017-2},
+	Issn = {1355-2198},
+	Journal = {Studies in History and Philosophy of Science Part B: Studies in History and Philosophy of Modern Physics},
+	Number = {4},
+	Pages = {493 - 510},
+	Title = {Why John von Neumann did not Like the Hilbert Space formalism of quantum mechanics (and what he liked instead)},
+	Url = {http://www.sciencedirect.com/science/article/pii/S1355219896000172},
+	Volume = {27},
+	Year = {1996},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S1355219896000172},
+	Bdsk-Url-2 = {https://doi.org/10.1016/S1355-2198(96)00017-2}}
 
 @article{Esfeld2014,
 	Author = {Esfeld, Michael and Hubert, Mario and Lazarovici, Dustin and D{\"u}rr, Detlef},
