--- a/quant-ph-9907069/surprises.tex
+++ b/quant-ph-9907069/surprises.tex
@@ -1,21 +1,30 @@
 %\documentstyle[a4wide,12pt]{report}
-\documentclass[a4wide,12pt]{report}
+\documentclass[12pt]{report}
 \usepackage{graphicx}
 
-\textwidth=16.2truecm
-\textheight=21.8truecm
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage{amssymb}
+\usepackage[letterpaper, margin=1.2in]{geometry}
+\tolerance=2000
+\usepackage[small]{titlesec}
 
-\oddsidemargin=-0.4truecm
-\topmargin=-0.5truecm
-
-%\oddsidemargin=-0.4truecm
-%\topmargin=-1.0truecm
-%\topmargin=-2.0truecm
+\def\underline{\relax}
 
 \begin{document}
-\sloppy
  
- \newcommand{\hh}{{\cal H}}
+\newcommand{\hh}{{\cal H}}
 \newcommand{\br}{{\bf R}}
 \newcommand{\bc}{{\bf C}}
 \newcommand{\bn}{{\bf N}} 
@@ -101,7 +110,7 @@ to the general formalism of quantum physics.}}
 
 \bigskip
 \begin{center}
-{\bf \Large{Summary}}
+{\bf \large{Summary}}
 \end{center}
 By a series of simple examples, we illustrate 
 how the lack of mathematical concern can readily lead to 
@@ -133,9 +142,13 @@ or at least avoided.
 \setcounter{page}{1}
  
  
+\tracingmacros=1
 \chapter{Introduction}
 
 Let us first provide an overview of the present article. 
+
+\tracingmacros=0
+
 The first part,  covering {\em section 2}
 and some complements gathered in the  
 {\em appendix}, 
@@ -2921,9 +2934,9 @@ on the state $|\Phi \rangle \in \hs$ simply reads
 \label{in2}
 P_{|\Phi \rangle} =
 |\Phi \rangle \langle \Phi |
-\]
+\end{equation}
 and for its matrix elements, one readily gets  
-\[
+\begin{equation}
 \langle \Psi | P_{|\Phi \rangle} | \Psi^{\prime} \rangle =
 \langle \Psi | \Phi \rangle  \langle \Phi | \Psi^{\prime} \rangle
 \ \ .
