--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-07-12 08:21:39 -0400 
+%% Created for Pete Su at 2019-07-14 10:22:51 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Zurek2018,
+	Author = {Wojciech Hubert Zurek},
+	Date-Added = {2019-07-14 10:21:27 -0400},
+	Date-Modified = {2019-07-14 10:22:51 -0400},
+	Doi = {10.1098/rsta.2018.0107},
+	Eprint = {https://royalsocietypublishing.org/doi/pdf/10.1098/rsta.2018.0107},
+	Journal = {Philosophical Transactions of the Royal Society A: Mathematical, Physical and Engineering Sciences},
+	Number = {2123},
+	Pages = {20180107},
+	Title = {{Quantum Theory of the Classical: Quantum Jumps, Born's Rule and Objective Classical Reality via Quantum Darwinism}},
+	Url = {https://royalsocietypublishing.org/doi/abs/10.1098/rsta.2018.0107},
+	Volume = {376},
+	Year = {2018},
+	Bdsk-Url-1 = {https://royalsocietypublishing.org/doi/abs/10.1098/rsta.2018.0107},
+	Bdsk-Url-2 = {https://doi.org/10.1098/rsta.2018.0107}}
 
 @article{Strocchi2012,
 	Abstract = {The standard presentation of the principles of quantum mechanics is critically reviewed both from the experimental/operational point and with respect to the request of mathematical consistency and logical economy. A simpler and more physically motivated formulation is discussed. The existence of non commuting observables, which characterizes quantum mechanics with respect to classical mechanics, is related to operationally testable complementarity relations, rather than to uncertainty relations. The drawbacks of Dirac argument for canonical quantization are avoided by a more geometrical approach.},
