--- a/1807.02092/LH.tex
+++ b/1807.02092/LH.tex
@@ -2,7 +2,7 @@
 %\documentstyle[aps,preprint]{revtex}
 %\documentstyle[aps,prl,epsfig]{revtex}
 %%%%%\documentclass[aps,preprint,prl,epsfig]{revtex4}
-\documentclass[aps,prx,amsmath,amssymb,amsfonts,lengthcheck,twocolumn]{revtex4}
+\documentclass[aps,amsmath,amssymb,amsfonts,12pt]{revtex4-1}
 %\documentclass[aps,twocolumn,rmp,epsfig]{revtex4}
 %\documentclass[aps,twocolumn,pra,epsfig]{revtex4}
 %\documentclass[aps,preprint,pra,epsfig]{revtex4}
@@ -20,7 +20,26 @@
 \usepackage{graphicx}
 \usepackage{color}
 \usepackage{amsmath}
-\usepackage[bookmarksnumbered, bookmarks, breaklinks, linktocpage]{hyperref}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[letterpaper,margin=1.1in]{geometry}
+\linespread{1.0}
+\tolerance=2000
+\usepackage[small]{titlesec}
 
 %#############################
 
@@ -635,12 +654,14 @@ $$(\alpha \ket \uparrow \ket {A_\uparrow}  + \beta \ket \downarrow \ket {A_\down
 \alpha \ket \uparrow \ket {A_\uparrow} \ket {\varepsilon_\uparrow}  + \beta \ket \downarrow \ket {A_\downarrow} \ket {\varepsilon_\downarrow} = \ket {\Psi_{\cS\cA\cE}} \eqno(7)$$
 Pointer states $\ket {A_\uparrow}, \ket {A_\downarrow}$ of $\cA$ survive decoherence by $\cE$. They retain perfect correlation with $\cS$ (or an observer, or other systems) in spite of $\cE$, independently of the value of $\bk {\varepsilon_\uparrow} {\varepsilon_\downarrow}$. Stability under decoherence is -- in our quantum Universe -- a prerequisite for effective classicality: Familiar states of macroscopic objects also have to survive monitoring by $\cE$ and, hence, retain correlations.
 
-\begin{figure*}[tb]
+\newpage
+\begin{figure*}[ht]
 \begin{tabular}{l}
 \vspace{-0.25in}
 \includegraphics[width=3.6in]{allcards.pdf}\\
 \end{tabular}
-\caption{Envariance -- {\it en}tanglement assisted in{\it variance} -- is a symmetry of entangled states. Envariance allows one to demonstrate Born's rule \cite{76,78,75} using a combination of an old intuition of Laplace \cite{40}
+\caption{\scriptsize
+Envariance -- {\it en}tanglement assisted in{\it variance} -- is a symmetry of entangled states. Envariance allows one to demonstrate Born's rule \cite{76,78,75} using a combination of an old intuition of Laplace \cite{40}
 about invariance and the origins of probability and quantum symmetries of entanglement.
 {\bf (a)} Laplace's {\it principle of indifference} (illustrated with playing cards) aims to establish
  symmetry using invariance under swaps.
@@ -1202,9 +1223,9 @@ quantum mechanics. Rev. Mod. Phys. 76, 1267-1305. (doi:10.1103/RevModPhys.76.126
 %, reprinted in \cite{WZ}.
 
 \bibitem{ZehDark} Zeh, H. D., 2006, Roots and fruits of decoherence. In Quantum decoherence (eds B Duplantier, J-M
-Raimond, V Rivasseau), pp. 151-175. Basel, Switzerland: Birkh‰user.
+Raimond, V Rivasseau), pp. 151-175. Basel, Switzerland: Birkh√§user.
 
-\bibitem{12} Born, M., 1926, Zur Quantenmechanik der Stoﬂvorg‰nge. Z. Phys. 37, 863-867.
+\bibitem{12} Born, M., 1926, Zur Quantenmechanik der Sto√üvorg√§nge. Z. Phys. 37, 863-867.
 (doi:10.1007/BF01397477)
 
 \bibitem{Z00} Zurek, W. H., 2000, Einselection and decoherence from an information theory perspective.
