--- a/1811.09488/Kaloyerou_Ilunga_2Slit_2DG_JPA_jpg.tex
+++ b/1811.09488/Kaloyerou_Ilunga_2Slit_2DG_JPA_jpg.tex
@@ -11,6 +11,29 @@
 \setlength{\topmargin}{-.7in}
 \setlength{\evensidemargin}{0pt}
 \setlength{\oddsidemargin}{0pt}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+\usepackage[letterpaper, margin=1.1in]{geometry}
+\tolerance=2000
+\usepackage[small]{titlesec}
+
+\date{November 28, 2018}
 \title{Computer Model of  the Two-Pinhole Interference Experiment Using Two-Dimensional Gaussian Wave-Packets}
 
  %\vspace{-0.8\bigskipamount}
