--- a/1601.02794/Bohrv2.tex
+++ b/1601.02794/Bohrv2.tex
@@ -1,6 +1,29 @@
-\documentclass[11pt]{article}
+\documentclass[12pt]{article}
 \usepackage{amssymb}
-\usepackage{amsmath}\usepackage{graphicx}  
+\usepackage{amsmath}\usepackage{graphicx}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+\usepackage[letterpaper, margin=1.3in]{geometry}
+\tolerance=2000
+\usepackage[small]{titlesec}
+\date{January 14, 2016}
+ 
 \input{Bohrificationpreamble.tex}
 \newcommand{\mmp}{measurement problem}
 \newtheorem{Definition}{Definition}[section]
@@ -18,7 +41,7 @@
 \author{Klaas Landsman\footnote{Institute for Mathematics, Astrophysics, and Particle Physics, Faculty of Science, Heyendaalseweg 135, 6525 {\sc aj Nijmegen, The Netherlands}, 
 Radboud University Nijmegen,
 \texttt{landsman@math.ru.nl}}}
-\date{\today}\vspace{-5mm}
+\date{January 14, 2016}
 \maketitle\vspace{-10mm}
 \begin{center}
 \emph{Dedicated to the memory of Rudolf Haag (1922--2016)}
@@ -36,6 +59,7 @@ Asymptotic Bohrification was inspired by the correspondence principle and forms 
 We review the history, the goals, and the achievements of this program so far. 
 \end{abstract}
 \maketitle
+\newpage
 \begin{small}
 \begin{quote}
  \tableofcontents
@@ -723,7 +747,7 @@ Mechanics}. Oxford: Clarendon Press.
  Farhi,  E.,  Goldstone, J.,  Gutmann, S. (1989). How probability arises in quantum mechanics.
  \emph{Annals of Physics (N.Y.)} 192, 368--382. 
 \item   Faye, J. (2002). Copenhagen Interpretation of Quantum Mechanics.
-\emph{The Stanford Encyclopedia of Philosophy (Summer 2002 Edition)}. Ed.  Zalta, E.N.Ê \\ \texttt{http://plato.stanford.edu/archives/sum2002/entries/qm-copenhagen/}.    
+\emph{The Stanford Encyclopedia of Philosophy (Summer 2002 Edition)}. Ed.  Zalta, E.N.E \\ \texttt{http://plato.stanford.edu/archives/sum2002/entries/qm-copenhagen/}.    
 \item
  Fine, A. (1974). On the completeness of quantum theory. \emph{Synthese} 29, 257--289.
  \item  Finkelstein, D. (1965). The logic of quantum physics. \emph{Transactions of the New York Academy of Science} 25, 621--637.  
