--- a/helpers/fixarxiv-palatino.tex
+++ b/helpers/fixarxiv-palatino.tex
@@ -15,6 +15,7 @@ bookmarksopenlevel=10
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl]{mathpazo}
 \linespread{1.1}
-\usepackage[letterpaper, margin=1.3in]{geometry}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={7.5in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
 \tolerance=2000
 \usepackage[small]{titlesec}
