--- a/helpers/fixarxiv-lucida.tex
+++ b/helpers/fixarxiv-lucida.tex
@@ -16,7 +16,9 @@ bookmarksopenlevel=10
 \usepackage{textcomp}
 \usepackage[altbullet]{lucidabr}
 \linespread{1.1}
-\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={7.5in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=2000
+\usepackage[small]{titlesec}
 
 % the lucida varphi is hideous
 \DeclareSymbolFont{greekletters}{OML}{zplm}{m}{it}
