fine tune ... add a dagger

--- a/gr-qc-0010055/bh-evaporation-notes.tex
+++ b/gr-qc-0010055/bh-evaporation-notes.tex
@@ -17,7 +17,8 @@
 \hypersetup{urlcolor=blue}
 \hypersetup{linkcolor=blue}
 \hypersetup{citecolor=blue}
-\usepackage[papersize={7.2in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={7.2in, 9.8in}, left=.7in, right=.7in, top=1in, bottom=1in]{geometry}
 \tolerance=2000
 \usepackage[small]{titlesec}
 
@@ -375,9 +376,9 @@ quantum-particle production. This is the effect that Hawking calculated in
 his 1975 paper
 \cite{hawking}.
 
-\vskip 0.1in\noindent
+\vskip.1in\noindent
 {\it Canonical Quantization, Hilbert Space and Particle Number Operators}
-\vskip 0.05in
+\vskip 0.1in
 
 Next we sketch the mathematical structure necessary for turning the
 scenario described above into
@@ -441,7 +442,7 @@ is the state which is annihilated by all the annhilation operators $\a$,
 for all $\omega>0$.
 The standard Fock space of states is then constructed by applying arbitrary
 products of creation operators to $|0\rangle_{in}$.  For example,
-the state $(\a ){}^n|0\rangle_{in}$ contains $n$ {\it in}-particles of energy
+the state $(\ad ){}^n|0\rangle_{in}$ contains $n$ {\it in}-particles of energy
 $\omega$. This is
 made precise by defining the number operator
 %
@@ -476,7 +477,7 @@ the number of {\it out}-particles in a state,
 %
 so that, {\it e.g.} $\langle0| \bd {}^n (N_\omega ^{out} )   \b {}^n|0\rangle_{out} = n$.
 
-\vskip 0.1in\noindent
+\goodbreak\vskip 0.1in\noindent
 {\it Bogolyubov Transformations}
 \vskip 0.05in
 
@@ -737,7 +738,7 @@ propagates from $\finf$ to $\ph$, and none reaches $\pinf$.  The particle
 production comes
 solely from the change of basis, {\it i.e.} from different definitions of time.
 
-\vskip 0.1in\noindent
+\vskip 0.1in\goodbreak\noindent
 {\it Particle Production}
 \vskip 0.05in
 
@@ -1082,8 +1083,8 @@ one such calculation in section (6).
 {\it The Calculation}
 \vskip 0.05in
 
-\noindent
-1) The mode (\ref{outmodes})  propagates along a path $\gamma$ that
+\begin{enumerate}
+\item The mode (\ref{outmodes})  propagates along a path $\gamma$ that
 goes from $\finf$ along a geodesic $u=u_1$
 passing close to the black hole horizon $\fh$. The ray passes through the
 collapsing star and then propagates out to $\pinf$ along a geodesic $v=v_1$,
@@ -1094,8 +1095,7 @@ propagating rays
 with  $v>v_o$ enter the black hole. In the extended spacetime $v=v_o$ would be
 the white hole horizon $\ph$.
 
-\noindent
-2) The ray $\gamma$ is connected to $\fh$ and $v=v_o$ by
+\item The ray $\gamma$ is connected to $\fh$ and $v=v_o$ by
 a geodesic deviation vector $\epsilon n^a$ with $\epsilon $ small and
 positive. On the
 part of the path that passes close to $\fh$, $n^a$ is tangent to a null
@@ -1104,8 +1104,7 @@ ingoing at $\fh$. The normalization is fixed by the condition $n^a l_a
 =-1$, where
 $l^a$ is a null geodesic generator of $\fh$.
 
-\noindent
-3) Let $p^a$ be tangent to an ingoing null geodesic at $\fh$,
+\item Let $p^a$ be tangent to an ingoing null geodesic at $\fh$,
 $p^a = {du\over d\lambda}{\partial \over \partial u}$. Note that $p^a$ is
 parallel to $n^a$ and therefore satisfies
 %
@@ -1123,15 +1122,13 @@ For the Schwarzchild case, $\kappa =1/4M$, but the relation (\ref{affine})
 will generalize to
 other cases as well. The affine parameter $\lambda =0$ on $\fh$.
 
-\noindent
-4) The affine parameter is a good coordinate near $\fh$, while $u$ is not.
+\item The affine parameter is a good coordinate near $\fh$, while $u$ is not.
 So the
 deviation vector connects the two null geodesics, the horizon at $\lambda
 =0$ and
 the ray $\gamma$ at $\lambda$, where $\lambda <0$.
 
-\noindent
-5) In these local inertial coordinates, the geodesic equation is simply
+\item In these local inertial coordinates, the geodesic equation is simply
 ${dp^\mu \over d\lambda} ={d^2 x^\mu\over d\lambda ^2}=0$, so that
 %
 \be\label{difference} \lambda p^\mu =x^\mu (\lambda ) -x^\mu (0) =-\epsilon
@@ -1144,8 +1141,7 @@ vector in point (2) above.  Equations (\ref{difference})  and
 \be\label{eps}\epsilon =-\lambda A^2\ee
 %
 
-\noindent
-6) Next, we trace the ray $\gamma$ through the collapsing star, and back
+\item Next, we trace the ray $\gamma$ through the collapsing star, and back
 to $\pinf$. In the conformal diagram, the ray bounces off the origin
 of coordinates and follows a null geodesic of constant $v <v_0$, which is
 near $v=v_0$. The two geodesics are still connected by $\epsilon n^a$. Since
@@ -1163,6 +1159,7 @@ through the chain of equalities in (\ref{changev}).  I would like to thank the
 students in my $1999$ General Relativity class for patiently helping to sort out
 the signs.}\end{footnote}
 on $\pinf$.
+\end{enumerate}
 
 Equation (\ref{changev}) is the desired relation between $u$ and $v$.
 For a solution to the scalar wave equation $\nabla _a \nabla ^a \phi =0$ that
@@ -1352,9 +1349,11 @@ The integral is then the same as in equations (\ref{rinalp})  and
 (\ref{bhalp}), and the thermal
 spectrum follows as before.
 
+\penalty-5000
 \vskip 0.1in\noindent
 {\it Charged Black Holes in DeSitter}
 \vskip 0.05in
+\penalty10000
 
 A deSitter spacetime is a spacetime of constant positive scalar curvature,
 and is a solution to the Einstein equation with cosmological constant
