page size experiments

--- a/helpers/fixarxiv-fourier.tex
+++ b/helpers/fixarxiv-fourier.tex
@@ -12,5 +12,7 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 \usepackage{fourier}
-\usepackage[letterpaper, margin=1.2in]{geometry}
-\sloppy
+\usepackage[papersize={6.5in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=2000
+\usepackage[small]{titlesec}
+
