--- a/0205105/0205105.tex
+++ b/0205105/0205105.tex
@@ -22,9 +22,9 @@ bookmarksopenlevel=10
 \usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl]{mathpazo}
 \linespread{1.1}
-\usepackage[letterpaper, margin=1.3in]{geometry}
-
-\tolerance=800
+\usepackage[papersize={6.5in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=2000
+\usepackage[small]{titlesec}
 
 \begin{document}
 
