--- a/helpers/fixarxiv-charter.tex
+++ b/helpers/fixarxiv-charter.tex
@@ -18,6 +18,7 @@ bookmarksopenlevel=10
 \usepackage[charter,vvarbb,scaled=1.07]{newtxmath}
 \usepackage[cal=boondoxo]{mathalfa}
 \linespread{1.05}
-\usepackage[papersize={7.5in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\usepackage[papersize={6.5in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
 \tolerance=2000
 \usepackage[small]{titlesec}
