--- a/helpers/fixarxiv-libtertine.tex
+++ b/helpers/fixarxiv-libtertine.tex
@@ -20,6 +20,8 @@ bookmarksopenlevel=10
 \usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[libertine]{newtxmath}
 \linespread{1.1}
-\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.5in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
 \tolerance=2000
 \usepackage[small]{titlesec}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+
