--- a/helpers/fixarxiv-lucida.tex
+++ b/helpers/fixarxiv-lucida.tex
@@ -16,9 +16,10 @@ bookmarksopenlevel=10
 \usepackage{textcomp}
 \usepackage[altbullet]{lucidabr}
 \linespread{1.1}
-\usepackage[papersize={7.5in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\usepackage[papersize={6.5in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
 \tolerance=2000
 \usepackage[small]{titlesec}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
 
 % the lucida varphi is hideous
 \DeclareSymbolFont{greekletters}{OML}{zplm}{m}{it}
