--- a/0205105/0205105.tex
+++ b/0205105/0205105.tex
@@ -23,6 +23,7 @@ bookmarksopenlevel=10
 \usepackage[noBBpl]{mathpazo}
 \linespread{1.1}
 \usepackage[papersize={6.5in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
 \tolerance=2000
 \usepackage[small]{titlesec}
 
