--- a/1803.04993/RS.tex
+++ b/1803.04993/RS.tex
@@ -115,7 +115,7 @@ bookmarksopenlevel=10
 {\bf\Large{Notes On Some Entanglement Properties \\ \vskip.5cm Of Quantum Field Theory}}
 \vskip
 0.5cm {Edward Witten} \vskip 0.05in {\small{ \textit{School of
-Natural Sciences, Institute for Advanced Study}\vskip -.4cm
+Natural Sciences, Institute for Advanced Study}\break
 {\textit{Einstein Drive, Princeton, NJ 08540 USA}}}
 }
 \end{center}
