--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,134 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-07-24 07:58:58 -0400 
+%% Created for Pete Su at 2019-08-06 08:10:22 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Borchers1965,
+	Abstract = {We want to construct, for every local irreducible quantum field theory which fulfils the spectrum condition, a new theory with the properties:1)It is physically equivalent to the given theory (in the sense ofHaag andKastler).2)The representation space contains a vacuum state.3)The new theory satisfies the spectrum condition.4)For every bounded region{\$}{\$}{\backslash}mathcal{\{}O{\}}{\$}{\$}the two representations of the algebra{\$}{\$}{\backslash}mathfrak{\{}A{\}}({\backslash}mathcal{\{}O{\}}){\$}{\$}are unitarily equivalent.5)The new theory is uniquely characterized by the properties 1)--4).},
+	Author = {Borchers, H. J.},
+	Date-Added = {2019-08-06 08:09:54 -0400},
+	Date-Modified = {2019-08-06 08:10:06 -0400},
+	Day = {01},
+	Doi = {10.1007/BF01649590},
+	Issn = {1432-0916},
+	Journal = {Communications in Mathematical Physics},
+	Month = {Mar},
+	Number = {1},
+	Pages = {57--79},
+	Title = {{On the vacuum state in quantum field theory. II}},
+	Url = {https://doi.org/10.1007/BF01649590},
+	Volume = {1},
+	Year = {1965},
+	Bdsk-Url-1 = {https://doi.org/10.1007/BF01649590}}
+
+@article{Borchers1963,
+	Abstract = {We wish to show that in a local quantum field theory which describes zero-mass particles the existence of a vacuum state is neither derivable from nor contradicted by the field equations and commutation relations which define the theory. It is an independent postulate which can be added for convenience or left off without changing the essential physical content of the theory.},
+	Author = {Borchers, H. J. and Haag, R. and Schroer, B.},
+	Date-Added = {2019-08-06 08:08:53 -0400},
+	Date-Modified = {2019-08-06 08:09:30 -0400},
+	Day = {01},
+	Doi = {10.1007/BF02750157},
+	Issn = {1827-6121},
+	Journal = {Il Nuovo Cimento (1955-1965)},
+	Month = {Jul},
+	Number = {1},
+	Pages = {148--162},
+	Title = {{The Vacuum State in Quantum Field Theory}},
+	Url = {https://doi.org/10.1007/BF02750157},
+	Volume = {29},
+	Year = {1963},
+	Bdsk-Url-1 = {https://doi.org/10.1007/BF02750157}}
+
+@article{Wightman1955,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {https://ui.adsabs.harvard.edu/abs/1955PhRv...98..812W},
+	Author = {{Wightman}, A.~S. and {Schweber}, S.~S.},
+	Date-Added = {2019-08-06 08:07:23 -0400},
+	Date-Modified = {2019-08-06 08:07:36 -0400},
+	Doi = {10.1103/PhysRev.98.812},
+	Journal = {Physical Review},
+	Month = may,
+	Pages = {812-837},
+	Title = {{Configuration Space Methods in Relativistic Quantum Field Theory. I}},
+	Volume = 98,
+	Year = 1955,
+	Bdsk-Url-1 = {https://doi.org/10.1103/PhysRev.98.812}}
+
+@article{Segal1962,
+	Author = {Segal, I. E.},
+	Date-Added = {2019-08-06 08:05:29 -0400},
+	Date-Modified = {2019-08-06 08:05:57 -0400},
+	Doi = {10.1215/ijm/1255632508},
+	Fjournal = {Illinois Journal of Mathematics},
+	Journal = {Illinois J. Math.},
+	Month = {Sept.},
+	Number = {3},
+	Pages = {500--523},
+	Publisher = {Duke University Press},
+	Title = {{Mathematical characterization of the physical vacuum for a linear Bose-Einstein field}},
+	Url = {https://doi.org/10.1215/ijm/1255632508},
+	Volume = {6},
+	Year = {1962},
+	Bdsk-Url-1 = {https://doi.org/10.1215/ijm/1255632508}}
+
+@article{Segal1959,
+	Author = {Segal, I. E.},
+	Date-Added = {2019-08-06 07:55:49 -0400},
+	Date-Modified = {2019-08-06 08:01:52 -0400},
+	Journal = {Mat.-Fys. Medd. Danske Vid. Selsk},
+	Number = {12},
+	Pages = {1-39},
+	Title = {{Foundations of the Theory of Dynamical Systems of Infinitely Many Degrees of Freedom, I}},
+	Volume = {31},
+	Year = {1959},
+	Bdsk-Url-1 = {https://doi.org/10.4153/CJM-1961-001-7}}
+
+@article{Segal1961,
+	Author = {Segal, I. E.},
+	Date-Added = {2019-08-06 07:53:30 -0400},
+	Date-Modified = {2019-08-06 08:01:58 -0400},
+	Doi = {10.4153/CJM-1961-001-7},
+	Journal = {Canadian Journal of Mathematics},
+	Pages = {1--18},
+	Publisher = {Cambridge University Press},
+	Title = {{Foundations of the Theory of Dynamical Systems of Infinitely Many Degrees of Freedom, II}},
+	Volume = {13},
+	Year = {1961},
+	Bdsk-Url-1 = {https://doi.org/10.4153/CJM-1961-001-7}}
+
+@book{Bogolubov1990,
+	Date-Added = {2019-08-06 07:49:35 -0400},
+	Date-Modified = {2019-08-06 07:49:46 -0400},
+	Doi = {10.1007/978-94-009-0491-0},
+	Editor = {N. N. Bogolubov and A. A. Logunov and A. I. Oksak and I. T. Todorov},
+	Publisher = {Springer Netherlands},
+	Title = {General Principles of Quantum Field Theory},
+	Url = {https://doi.org/10.1007/978-94-009-0491-0},
+	Year = {1990},
+	Bdsk-Url-1 = {https://doi.org/10.1007/978-94-009-0491-0}}
+
+@article{Earman2006,
+	Abstract = {Although the philosophical literature on the foundations of quantum field theory recognizes the importance of Haag's theorem, it does not provide a clear discussion of the meaning of this theorem. The goal of this paper is to make up for this deficit. In particular, it aims to set out the implications of Haag's theorem for scattering theory, the interaction picture, the use of non-Fock representations in describing interacting fields, and the choice among the plethora of the unitarily inequivalent representations of the canonical commutation relations for free and interacting fields.},
+	Author = {Earman, John and Fraser, Doreen},
+	Date-Added = {2019-08-04 08:42:36 -0400},
+	Date-Modified = {2019-08-04 08:43:00 -0400},
+	Day = {22},
+	Doi = {10.1007/s10670-005-5814-y},
+	Issn = {1572-8420},
+	Journal = {Erkenntnis},
+	Month = {Jun},
+	Number = {3},
+	Pages = {305},
+	Title = {{Haag's Theorem and its Implications for the Foundations of Quantum Field Theory}},
+	Url = {https://doi.org/10.1007/s10670-005-5814-y},
+	Volume = {64},
+	Year = {2006},
+	Bdsk-Url-1 = {https://doi.org/10.1007/s10670-005-5814-y}}
 
 @inproceedings{Traschen:1999zr,
 	Archiveprefix = {arXiv},
