--- a/quant-ph-0202175/pureprp.tex
+++ b/quant-ph-0202175/pureprp.tex
@@ -1,27 +1,6 @@
 \documentclass[aps,prl,showkeys,showpacs,preprint,groupedaddress]{revtex4}
 \usepackage{graphicx}
 
-\usepackage[colorlinks=true
-,urlcolor=blue
-,anchorcolor=blue
-,citecolor=blue
-,filecolor=blue
-,linkcolor=blue
-,menucolor=blue
-,linktocpage=true]{hyperref}
-\hypersetup{
-bookmarksopen=true,
-bookmarksnumbered=true,
-bookmarksopenlevel=10
-}
-%\usepackage{amssymb}
-%\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl]{mathpazo}
-\linespread{1.1}
-\usepackage[papersize={7.2in, 9.8in}, left=.7in, right=.7in, top=1in, bottom=1in]{geometry}
-\tolerance=2000
-\usepackage[small]{titlesec}
-
 \begin{document}
 
 \title{Photons uncertainty removes Einstein-Podolsky-Rosen paradox}
@@ -33,7 +12,7 @@ F\'\i sica Te\'orica, Universidad de Vigo, 32004 Ourense, Spain}
 
 \email[]{daniele@uvigo.es}
 
-\date{28 Feb 2002\medskip}
+\date{\today}
 
 \begin{abstract}
 Einstein, Podolsky and Rosen (EPR) argued that the
@@ -127,7 +106,7 @@ component $S_z(A)$ of particle A with eigenvalues $\pm\hbar/2$
 respectively (this example is usually called the ``EPR-Bohm"
 experiment \cite{Bohm,Laloe}).
 
-Assuming the state of Eq.~(\ref{entanglement}), it is easy to see
+Assuming the state of Eq.˜ (\ref{entanglement}), it is easy to see
 that the measurement of the spin component $S_z$ performed
 independently on any of the two particles can give both values
 $\pm\hbar/2$, each with probability 1/2. On the other hand, if in
@@ -138,7 +117,7 @@ distant particle B, that will give $-\hbar/2$. The quantity $S_z$
 observed on A would then instantaneously acquire ``an element of
 physical reality" also on B, according to the original definition:
 {\it ``If, without in any way disturbing a system we can predict
-with certainty (i.e. with probability equal to unity) the value
+with certainty (i.e.˜ with probability equal to unity) the value
 of a physical quantity, then there is an element of physical
 reality corresponding to this physical quantity"} \cite{EPR} (the
 italics and the parenthesis also belong to the original paper).
@@ -160,7 +139,7 @@ condition of completeness" that they had defined as follows: {\it
 ``every element of the physical reality must have a counterpart in
 the physical theory"} \cite{EPR}.
 
-The EPR argument (later called paradox, see e.g. Ref.~
+The EPR argument (later called paradox, see e.g.˜ Ref.˜
 \cite{Einstein}) is so rigorous, that Lalo\"e reformulated it in
 the form of a theorem: {\it ``If the predictions of quantum
 mechanics are correct (even for systems made of remote correlated
@@ -173,14 +152,14 @@ holds almost independently of the interpretation of the theory,
 with the exception of deterministic interpretations introducing
 hidden variables \cite{Laloe}. It is then impossible to find an
 ``EPR-paradox-free" interpretation of the probabilistic quantum
-mechanics based on Eq.~(\ref{entanglement}). It is the latter
-equation, i.e. the entangled state vector description, which
+mechanics based on Eq.˜ (\ref{entanglement}). It is the latter
+equation, i.e.˜ the entangled state vector description, which
 should be rejected, as EPR pointed out.
 
 What EPR did not perhaps expect was that a way out was to be found
 in the modern version of the Quantum Theory itself. In fact, as we
 shall see, the SM description does not rely on the ``entangled"
-state of A and B (whose spin part is Eq. (\ref{entanglement}) in
+state of A and B (whose spin part is Eq.˜ (\ref{entanglement}) in
 the example that we have considered above), but it allows for the
 presence of an undetermined number of additional photons.
 
@@ -195,17 +174,17 @@ additional real particles can always be created in the production
 process itself.} Which additional species can appear depends on
 the available energy. Since massless particles can have
 arbitrarily low energy, the possible presence of real ``soft
-photons" (i.e. photons having a low enough energy) should always
+photons" (i.e.˜ photons having a low enough energy) should always
 be taken into account in the theoretical treatment.
 
 Here, I will prove this statement using QFT perturbation theory
-(i.e. Feynman diagrams). To be concrete, I will first discuss two
+(i.e.˜ Feynman diagrams). To be concrete, I will first discuss two
 kinds of ideal EPR experiments: i) those involving two charged
 spin 1/2 particles; and ii) those involving two photons. In both
 cases, I will give explicit examples predicting the creation of an
 arbitrary number of additional photons.
 
-i) In Fig. \ref{fig1}, I have drawn a tree-level diagram where
+i) In Fig.˜ \ref{fig1}, I have drawn a tree-level diagram where
 the ``blob" represents the particular elementary process that
 produces particles A and B.
 \begin{figure}
@@ -220,13 +199,13 @@ Even without specifying that part of the diagram (involving some
 ``initial" particles), we see that an arbitrary number of real
 photons (three in the particular case of the figure) can be
 attached to each of the external fermion legs (see also Chap. 13
-of Ref. \cite{WeinbookI}).
+of Ref.˜ \cite{WeinbookI}).
 
 ii) Since no three photon vertex exists at the tree level, in the
 ``two-photon" EPR experiment we have to look for one loop effects.
-In Fig. \ref{fig3}, I show a ``box" diagram for the production of
+In Fig.˜ \ref{fig3}, I show a ``box" diagram for the production of
 two additional real photons \footnote{This box diagram has been
-studied in different contexts, e.g. in the theory of two photon
+studied in different contexts, e.g.˜ in the theory of two photon
 scattering.}.
 \begin{figure}
 \includegraphics{fig3.eps}
@@ -258,7 +237,7 @@ diagram without any additional photons attached (that would imply
 the same correlations as the old quantum-mechanical approach)
 \footnote{The ``Infrared Divergencies" related to the integration
 over arbitrarily small photons momenta can be handled as shown in
-Chapter 13 of Ref. \cite{WeinbookI}, and they eventually
+Chapter 13 of Ref.˜ \cite{WeinbookI}, and they eventually
 cancel.}. In any case, such rates are suppressed by increasing
 powers of the fine structure constant $\alpha\simeq 1/137$,
 depending on the considered number of additional photons. Since
@@ -277,7 +256,7 @@ $\Lambda\to0$, the helicities of the two fermion will remain
 opposite \cite{WeinbookI}), although this is not necessarily a
 small factor in the EPR ideal experiment. In the case of a
 two-photons EPR experiment, the probability of a diagram such as
-that in Fig. \ref{fig3} is suppressed by four powers of the fine
+that in Fig.˜ \ref{fig3} is suppressed by four powers of the fine
 structure constant and by the electron propagators in the loop
 (which are larger than the available energy, unless one considers
 ideal EPR experiments with very energetic photons, at or above the
@@ -290,7 +269,7 @@ To summarize, the precise suppression factor depends on the
 particular case that is considered. For our purposes, it is
 sufficient to note that there is a non-vanishing probability for
 additional photons to be created, at least due to diagrams such as
-those of Figs. \ref{fig1} or \ref{fig3}, and that they contribute
+those of Figs.˜ \ref{fig1} or \ref{fig3}, and that they contribute
 to energy, momentum and angular momentum conservation.
 
 The important fact is that this uncertainty principle can be
@@ -306,13 +285,13 @@ particles, including the neutral ones, such as the photon, the
 neutrino (and even the possible Higgs boson), can radiate photons
 when they appear as external legs of an interaction process. For
 the charged particles and for the photon, this fact is shown in
-Figs. \ref{fig1} and \ref{fig3}. For a neutrino (or a Higgs
+Figs.˜ \ref{fig1} and \ref{fig3}. For a neutrino (or a Higgs
 boson), it is easy to construct loop diagrams involving virtual W
 bosons and charged fermions to which a photon line can be
 attached. In the case of composite particles, such as the neutral
 K or B mesons, the production process involves the constituent
 quarks, charged particles to which external photon lines can be
-attached just as in Fig. \ref{fig1} \footnote{In all such cases,
+attached just as in Fig.˜ \ref{fig1} \footnote{In all such cases,
 additional photons can also be radiated by the lines of all the
 possible charged particles (besides the EPR pair) that are
 involved in the relevant ``blob" production process.}.
@@ -331,7 +310,7 @@ symmetry principle. In fact, it is based on two points: the
 existence of massless neutral particles, the photons; and of the
 fermion-photon vertex, that allows for the radiation of photons by
 any external line of the relevant Feynman diagrams (possibly
-through loops as in Fig. \ref{fig3}). But it is well known that
+through loops as in Fig.˜ \ref{fig3}). But it is well known that
 both the electromagnetic vertex and the masslessness of the photon
 are the direct consequences of the local, unbroken
 (electromagnetic) gauge symmetry.
@@ -341,7 +320,7 @@ discussion, the state arising from the interaction is {\it never}
 an eigenstate of the operator counting the number of photons: {\it
 the number of photons cannot be determined (it never gets a
 physical reality).} This implies that {\it it is never correct to
-use a state with a fixed number of particles, such as that of Eq.
+use a state with a fixed number of particles, such as that of Eq.˜
 (\ref{entanglement}), as emerging from a given interaction.}
 
 Now, in a given Feynman diagram, the conservation laws hold for
@@ -417,7 +396,7 @@ space state vector after the measurement of a conserved charge on
 a massive particle is an eigenvector of that one-particle charge
 operator. The element of physical reality that appears after the
 measurement then has a counterpart in the theory, being the
-corresponding eigenvalue (i.e. the definite value) of this
+corresponding eigenvalue (i.e.˜ the definite value) of this
 one-particle observable \footnote{Possibly the only observables
 that can actually get a local reality in QFT are the conserved
 gauge charges. This would not prevent QFT to fulfill the EPR
@@ -430,7 +409,7 @@ photons as we have seen. I think that this result is not
 surprising, since the local gauge symmetry implies local
 interactions. Note also that the possibility of radiating
 arbitrarily soft photons corresponds to the ``infrared" behavior
-of the theory, i.e. to its long distance properties, which are
+of the theory, i.e.˜ to its long distance properties, which are
 precisely those that are expected to be relevant for the
 discussion of distant measurements.
 
@@ -451,7 +430,7 @@ relevant correlations are the average values of the products of
 the components $S_{\vec a}(A)$ and $S_{\vec b}(B)$ of the spins of
 the two particles along arbitrary unit vectors $\vec a$ and $\vec
 b$ \cite{Bell}. The old Quantum Mechanics prediction, based on the
-spin state of Eq. (\ref{entanglement}), was $ \langle S_{\vec
+spin state of Eq.˜ (\ref{entanglement}), was $ \langle S_{\vec
 a}(A)S_{\vec b}(B)\rangle =-\frac{\hbar^2}{4}\vec a\cdot\vec b$,
 which is the maximal correlation (in absolute value) that can be
 achieved. In fact, the original EPR paradox requires strictly
@@ -518,7 +497,7 @@ hand, the QFT description, which is not limited to the
 ``entangled" wave function with a definite number of particles,
 can fulfill the EPR criterion of completeness (although it can
 hardly be considered to be the ultimate ``theory of everything",
-e.g. it does not describe gravity). This solution would be
+e.g.˜ it does not describe gravity). This solution would be
 confirmed by the observation of an apparent symmetry violation in
 a single event in an EPR experiment. On the other hand, the EPR
 correlations are expected to be smaller than those calculated by
