--- a/quant-ph-0312059/rmp_arxiv.tex
+++ b/quant-ph-0312059/rmp_arxiv.tex
@@ -1,6 +1,5 @@
 
-\documentclass[twocolumn,rmp,aps,amsmath,amsfonts,noshowkeys,noshowpacs]{revtex4}
-\usepackage[linktocpage=true,colorlinks=true,citecolor=blue]{hyperref}
+\documentclass[rmp,aps,amsmath,amsfonts,noshowkeys,noshowpacs,12pt]{revtex4}
 
 
 % simple author-defined abbreviations for commonly used phrases and symbols:
@@ -12,6 +11,27 @@
 \newcommand{\braket}[2]{\ensuremath{{\langle #1}|{#2 \rangle}}}
 \newcommand{\ketbra}[2]{\ensuremath{|{#1 \rangle}{\langle #2}|}}
 
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.75in, 10in}, left=.5in, right=.6in, top=1in, bottom=1in]{geometry}
+\tolerance=2000
+\usepackage[small]{titlesec}
 
 \begin{document}
 
@@ -55,6 +75,7 @@
 
 \tableofcontents 
 
+\newpage
 
 \section{Introduction}
 
