--- a/1904.04051/1904.04051.tex
+++ b/1904.04051/1904.04051.tex
@@ -1,6 +1,5 @@
-\documentclass[12pt,a4paper]{article}
+\documentclass[12pt]{article}
 \usepackage{enumitem}
-\usepackage[margin=3cm]{geometry}
 \usepackage{authblk}
 \renewcommand\Affilfont{\itshape\small}
 \usepackage{booktabs}
@@ -8,6 +7,7 @@
 \linespread{1.1}
 \usepackage{soul}
 \usepackage[colorinlistoftodos,textsize=footnotesize]{todonotes}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
 \let\openbox\relax
 \usepackage{amsmath,amssymb,amsthm,mathbbol,mathrsfs}
    \usepackage{dsfont}
@@ -31,7 +31,6 @@ bookmarksopenlevel=10
 }
 \tolerance=2000
 \usepackage[small]{titlesec}
-
 
 \newcommand{\1}{\mathds{1}}                         % identity
 %    ------------------------------
