--- a/1501.06511/EPGuPGAFinal.tex
+++ b/1501.06511/EPGuPGAFinal.tex
@@ -1,8 +1,8 @@
 \def\isFV{true}
 \def\isBJ{true}
 % sigh ... can't use ifthenelse to choose document class since it requires loading a package
-%\documentclass[10pt]{article}
-\documentclass{birkjour}
+\documentclass[12pt]{article}
+%\documentclass{birkjour}
 %\usetheme{default}
 %\setbeamercovered{transparent}
 \setlength\textwidth{12.5cm}
@@ -38,6 +38,28 @@
 \newcommand{\gTh}{\cite{gunnThesis}\xspace}
 
 \pagestyle{headings}
+\usepackage[papersize={6.5in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+\tolerance=2000
+\usepackage[small]{titlesec}
+
 
 \begin{document}
 
@@ -47,22 +69,11 @@
 \title{Doing euclidean plane geometry\\using projective geometric algebra}% \\Via 
 \author{Charles G. Gunn } %\\ Raum+Gegenraum \\ Brieselanger Weg 1 \\ 14612  Falkensee, Germany \\ projgeom@gmail.com } %gunn@math.tu-berlin.de}
 }
-{
+
 \title{Doing euclidean plane geometry\\using projective geometric algebra\footnote{This article has been published as \cite{gunn2016b}, DOI 10.1007/s00006-016-0731-5.  The final publication is available at link.springer.com.}}%Euclidean plane geometry \\ via projective geometric algebra}% \\Via 
 \author{Charles G. Gunn}
-\address{ Instit\"{u}t f\"{u}r Mathematik  MA 8-3\\
-Technische Universit\"{a}t Berlin\\
-Str. des 17 Juni 136\\
-10623 Berlin Germany\\
-\\
-Charles G. Gunn\\Raum+Gegenraum \\  Brieselanger Weg 1 \\ 14612 Falkensee Germany  }
-% Institut f\"ur Mathematik \\  Geometry and Visualization Group \\ Technische Universit\"at Berlin  }
-%\date{}                                           % Activate to display a given date or no date
-\email{gunn@math.tu-berlin.de}
-\keywords{euclidean geometry, plane geometry, geometric algebra, projective geometric algebra, degenerate signature,  sandwich operator, orthogonal projection, isometry}
-}
 %\date{CS Department, UNC-Chapel Hill \\ October 27, 2010}
-%\date{February 12, 2013} %
+\date{February 12, 2013} %
 \maketitle
 
 \begin{abstract}
