--- a/1501.06511/EPGuPGAFinal.tex
+++ b/1501.06511/EPGuPGAFinal.tex
@@ -73,7 +73,7 @@ bookmarksopenlevel=10
 \title{Doing euclidean plane geometry\\using projective geometric algebra\footnote{This article has been published as \cite{gunn2016b}, DOI 10.1007/s00006-016-0731-5.  The final publication is available at link.springer.com.}}%Euclidean plane geometry \\ via projective geometric algebra}% \\Via 
 \author{Charles G. Gunn}
 %\date{CS Department, UNC-Chapel Hill \\ October 27, 2010}
-\date{February 12, 2013} %
+\date{30 Oct 2016} %
 \maketitle
 
 \begin{abstract}
