--- a/1501.06511/EPGuPGAFinal.tex
+++ b/1501.06511/EPGuPGAFinal.tex
@@ -58,7 +58,7 @@ bookmarksopenlevel=10
 \usepackage[noBBpl]{mathpazo}
 \linespread{1.1}
 \tolerance=2000
-
+\usepackage[small]{titlesec}
 
 \begin{document}
 
