--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-08-13 08:08:23 -0400 
+%% Created for Pete Su at 2019-08-13 20:15:26 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Fredenhagen:2006,
+	Archiveprefix = {arXiv},
+	Author = {Fredenhagen, Klaus and Rehren, Karl-Henning and Seiler, Erhard},
+	Date-Added = {2019-08-13 20:14:54 -0400},
+	Date-Modified = {2019-08-13 20:15:26 -0400},
+	Doi = {10.1007/978-3-540-71117-9_4},
+	Eprint = {hep-th/0603155},
+	Journal = {Lect. Notes Phys.},
+	Note = {\href{https://arxiv.org/abs/hep-th/0603155v1}{arXiv:0603155v1}},
+	Pages = {61-87},
+	Primaryclass = {hep-th},
+	Slaccitation = {%%CITATION = HEP-TH/0603155;%%},
+	Title = {{Quantum field theory: Where we are}},
+	Volume = {721},
+	Year = {2007},
+	Bdsk-Url-1 = {https://doi.org/10.1007/978-3-540-71117-9_4}}
 
 @article{Gunn2017,
 	Author = {Gunn, Charles G.},
