--- a/hep-th-0603155/hep-th-0603155.tex
+++ b/hep-th-0603155/hep-th-0603155.tex
@@ -1,5 +1,13 @@
 \documentclass[multphys,vecphys]{svmult}
 
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.1in, 9.3in}, left=.7in, right=.7in, top=1in, bottom=1in]{geometry}
+\tolerance=2000
+\usepackage[small]{titlesec}
+
+
 % choose options for [] as required from the list
 % in the Reference Guide, Sect. 2.2
 
@@ -85,7 +93,7 @@
 \parskip.5mm
 \begin{document}
 
-\title*{\bf Quantum Field Theory: Where We Are}
+\title{\bf Quantum Field Theory: Where We Are}
 % Use \titlerunning{Short Title} for an abbreviated version of
 % your contribution title if the original one is too long
 \author{{Klaus Fredenhagen}\inst{1}\and
@@ -106,14 +114,12 @@ Physik, Universit\"at Hamburg, \\  22761 Hamburg, Germany \\
 
 
 
-\vskip10mm
 \begin{abstract}  We comment on the present status, the
   concepts and their limitations, and the successes and open problems 
   of the various approaches to a relativistic quantum theory of elementary 
   particles, with a hindsight to questions concerning quantum gravity and 
   string theory. 
 \end{abstract}
-\vskip36mm
 
 %\tableofcontents
 \renewcommand{\thefootnote}{} %{\thesection.\arabic{equation}}
