--- a/1107.3967/1107.3967.tex
+++ b/1107.3967/1107.3967.tex
@@ -1,7 +1,28 @@
-\documentclass[12pt,a4paper]{article}
+\documentclass[12pt]{article}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage{amssymb}
+\usepackage{amssymb,epsfig,amsmath,euscript,array,color}
+\usepackage[T1]{fontenc}
+\usepackage[altbullet]{lucidabr}
+\linespread{1.1}
+\usepackage[letterpaper, margin=1.2in]{geometry}
+%\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+
 %\usepackage{psfrag}
 \usepackage{graphics,graphicx}
-\usepackage{amssymb,epsfig,amsmath,euscript,array,color}
 \usepackage{cite}
 %g
 
@@ -11,19 +32,6 @@
 \renewcommand{\theequation}{\thesection.\arabic{equation}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% This defines an appendix counter....\Appendix....if not using Roman
-% section headings then remove the last line that sets equation numbers
-\newcommand{\startappendix}{
-\setcounter{section}{0}
-\renewcommand{\thesection}{\Alph{section}}
-\renewcommand{\theequation}{\Alph{section}.\arabic{equation}}}
-
-\newcommand{\Appendix}[1]{
-\refstepcounter{section}
-\begin{flushleft}
-{\Large\bf Appendix \thesection: #1}
-\end{flushleft}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % This defines an appendix counter....\Appendix....if not using Roman
@@ -89,7 +97,7 @@
 \newcommand{\Pslash}{P \!\!\!\! / }
 \newcommand{\partialslash}{\partial \!\!\! / }
 
-\setlength{\parindent}{0in}
+%\setlength{\parindent}{0in}
 
 \def\bd{\begin{document}}
 \def\ed{\end{document}}
@@ -315,10 +323,6 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\setlength{\parskip}{15pt} \setlength{\textheight}{22.5cm}
-\setlength{\textwidth}{16cm} \setlength{\voffset}{-2cm}
-\setlength{\hoffset}{-1.5cm}
 
 \begin{document}
 \begin{flushright} Imperial-TP-JAPB-01-2011\end{flushright}
@@ -3418,7 +3422,7 @@ of the Type I multiplets and so the Type II theories actually have $\mathcal{N}\
 
 \newpage
 
-\startappendix
+\appendix
 \section{Advanced Topics}
 \subsection{The Hagedorn Temperature}
 Let us consider the high-temperature counting of states for the Bosonic string, following the general line of reasoning taken in 
@@ -3865,11 +3869,15 @@ Proceeding in the same fashion as in Section \ref{Bosonicalgebra}:
 &{}& +\sum_{p=1}^{\infty}(m-p)(n-m-p)c_{-p}b_{m+n+p}-\sum_{p=1}^{\infty}(m-p)(2n-p)c_{n-p}b_{m+p}\nn\ ,
 \eea
 which upon re-labelling $p-n\rightarrow p$ in terms 1 and 4 becomes
-\bea
+\begin{align}
 \label{ghostsnormal}
-\left[L_m^{(bc)},L_n^{(bc)}\right] &=& \sum_{p=-\infty}^{-n}(m-n-p)(n-p)b_{m+n+p}c_{-p} -\sum_{p=-\infty}^0(m-p)(n-m-p)b_{m+n+p}c_{-p}\nn\\
-&{}& +\sum_{p=1}^{\infty}(m-p)(n-m-p)c_{-p}b_{m+n+p}-\sum_{p=-n+1}^{\infty}(m-n-p)(n-p)c_{-p}b_{m+n+p}\nn\ .
-\eea
+\left[L_m^{(bc)},L_n^{(bc)}\right] &=\!\sum_{p=-\infty}^{-n}(m-n-p)(n-p)b_{m+n+p}c_{-p} 
+\nn\\
+&- {\hskip -.3em}\sum_{p=-\infty}^0(m-p)(n-m-p)b_{m+n+p}c_{-p}\nn\\
+&+ \,\,\sum_{p=1}^{\infty}\,\,(m-p)(n-m-p)c_{-p}b_{m+n+p}\nn\\
+&- {\hskip -.7em}\sum_{p=-n+1}^{\infty}(m-n-p)(n-p)c_{-p}b_{m+n+p}.
+\end{align}
+
 Now if $n<0$, terms 2, 3 and 4 are all normal ordered already. Term 1 can be split up into two parts, one $\sum_{-\infty}^{0}$ and one $\sum_{1}^{-n}$, and 
 when the second of these is explicitly normal ordered, one part contributes to the standard commutator along with the $\sum_{-\infty}^{0}$ and terms 2, 3 and 4 of 
 (\ref{ghostsnormal}) thus:
