--- a/0506082v2/0506082-pal.tex
+++ b/0506082v2/0506082-pal.tex
@@ -19,19 +19,14 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage{amssymb}
-\usepackage[T1]{fontenc}
-\usepackage{textcomp}
-\usepackage[altbullet]{lucidabr}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
 \linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
 \usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
 \tolerance=2000
 \usepackage[small]{titlesec}
-%\usepackage[letterpaper, margin=1.2in]{geometry}
-
-% the lucida varphi is hideous
-\DeclareSymbolFont{greekletters}{OML}{zplm}{m}{it}
-\DeclareMathSymbol{\varphi}{\mathord}{greekletters}{"27}
 
 \newtheorem{Definition}{Definition}
 \newtheorem{Lemma}{Lemma}
