--- a/0506082v2/0506082.tex
+++ b/0506082v2/0506082.tex
@@ -4,6 +4,7 @@
 
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{enumitem}
 
 \usepackage[colorlinks=true
 ,urlcolor=blue
@@ -18,12 +19,14 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl]{mathpazo}
 \linespread{1.1}
 \usepackage[letterpaper, margin=1.2in]{geometry}
-
-
-\tolerance=1000
+%\usepackage[papersize={6.5in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=2000
+\usepackage[small]{titlesec}
 
 \newtheorem{Definition}{Definition}
 \newtheorem{Lemma}{Lemma}
@@ -403,10 +406,11 @@ only ``relative" or ``perspectival" existence.
 \end{enumerate}
 An example of a position that our modern understanding of the measurement problem\footnote{See the books cited in footnote \ref{QMtexts}, 
 especially Mittelstaedt (2004).}  has rendered internally inconsistent is: 
-\begin{quote}
-3.  Quantum theory is fundamental and universally valid, and (yet) the classical world exists absolutely.
-\end{quote}
+\begin{enumerate}[resume]
+  \item Quantum theory is fundamental and universally valid, and (yet) the classical world exists absolutely.
+\end{enumerate}
 
+\noindent
 In some sense stance 1 originates with Heisenberg (1927), but the modern era started with
 Everett (1957).\footnote{\label{MWM} Note, though,  that stance 1 by no means implies the so-called  Many-Worlds Interpretation, which also in our opinion is `simply a meaningless collage of words' (Leggett, 2002).} These days, most decoherence theorists, consistent historians,
 and modal interpreters seem to support it. Stance 2 has a long and respectable pedigree unequivocally, including among others Einstein, Schr\"{o}dinger, and Bell. More recent backing has come from  Leggett as well as from ``spontaneous collapse" theorists such as Pearle, Ghirardi, Rimini, Weber, and others.
@@ -2997,7 +3001,7 @@ Heidelberg: Springer-Verlag.
 \item  Halliwell, J.J.  (1998). Decoherent histories and hydrodynamic equations. {\it   Physical Review} D58, 105015-1--12.
 \item  Halliwell, J.J. (2000). The emergence of hydrodynamic equations from quantum theory: a  decoherent histories analysis. {\it   International Journal of Theoretical Physics }  39, 1767--1777.
 \item  Halliwell, J.J.   (2004).Some recent developments in the decoherent histories approach to  quantum theory. {\it   Lecture Notes in Physics}  633, 63--83.
-  \item  Halliwell, J.J. (2005). How the quantum Universe becomes classical.
+  \item  Halliwell, J.J. (2005). How the quantum Universe becomes classical.\break
    \texttt{arXiv:quant-ph/0501119}.
 \item Halvorson, H. (2004). Complementarity of representations in quantum mechanics.  {\it Studies in History and Philosophy of Modern Physics }   B35, 45--56.  
 \item Halvorson, H. (2005). Algebraic quantum field theory. This volume.
@@ -3193,7 +3197,7 @@ Ali, S.T., Emch, G.G., Odzijewicz, A., Schlichenmaier, M., \&\ Woronowicz, S.L. 
 \item Landsman, N.P. (2005b). Lie Groupoids and Lie algebroids in physics and noncommutative geometry. {\it Journal of Geom. Physics }, to appear.
 \item Landsman, N.P. (2006). 
 When champions meet:  Rethinking the Bohr--Einstein debate.
-{\it Studies in History and Philosophy of Modern Physics}, to appear.
+{\it Studies in History and Philosophy of Modern Physics}, to appear.\break
 \texttt{arXiv:quant-ph/0507220}.
 \item Landsman, N.P. \&\ Ramazan, B.  (2001). Quantization of Poisson algebras associated to Lie algebroids. {\it  Contemporary Mathematics} 282, 159--192.
 \item Laurikainen, K.V. (1988). {\it Beyond the Atom: The Philosophical Thought of Wolfgang Pauli}. Berlin: Springer-Verlag.
@@ -3399,7 +3403,7 @@ Mathematical\ Physics } 34, 2185--2205.
 \item Saunders, S. (1993). Decoherence, relative states, and evolutionary adaptation. {\it Foundations of Physics} 23, 1553--1585.
  \item Saunders, S. (1995) Time, quantum mechanics, and decoherence.
 {\it Synthese} 102, 235--266.
- \item Saunders, S. (2004). Complementarity and Scientific Rationality.
+ \item Saunders, S. (2004). Complementarity and Scientific Rationality.\hfil\break
 \texttt{arXiv:quant-ph/0412195}.
 \item Scheibe, E. (1973). {\it The Logical Analysis of Quantum Mechanics}. Oxford: Pergamon Press.
 \item Scheibe, E. (1991). J. v. Neumanns und J. S. Bells Theorem. Ein Vergleich.
